--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "lint": "next lint --max-warnings=0",
     "test": "jest",
     "test:watch": "yarn test --watch",
@@ -48,6 +49,7 @@
     "jest-environment-jsdom": "^29.4.2",
     "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.1.1",
+    "plop": "^3.1.2",
     "prettier": "^2.8.4",
     "typescript": "4.9.5"
   }
