--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@styled-icons/material-outlined": "^10.47.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
