feat:: added version 1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "Neue",
     "plopfile",
     "poppins",
+    "tabnine",
     "testid",
     "xlarge",
     "xsmall",
@@ -15,3 +16,5 @@
     "xxsmall"
   ]
 }
+
+
