--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,27 @@
 //Necessário para conseguir escrever no jest com typescript e novas funcionalidades do js
 {
+  "presets": ["next/babel", "@babel/preset-typescript"],
   "plugins":[
     [
       "babel-plugin-styled-components",
       {
-        "ssr":true
+        "ssr":true,
+        "displayName":true
       }
     ]
   ],
-  "presets": ["next/babel", "@babel/preset-typescript"]
+  "env": {
+    "test":{
+      "plugins":[
+        [
+          "babel-plugin-styled-components",
+          {
+            "ssr":false,
+            "displayName":false
+          }
+        ]
+
+      ]
+    }
+  }
 }
