--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@styled-icons/material-outlined": "^10.47.0",
     "@styled-icons/remix-line": "^10.46.0",
     "next": "13.1.6",
+    "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
