--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "styled-components": "^5.3.6",
     "styled-media-query": "^2.1.2"
   },
@@ -38,6 +39,7 @@
     "@types/jest": "^29.4.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
