--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,194 @@
 {
+  //Eslint + Prettier formatter
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
+
   "cSpell.words": [
-    "latin",
+    "Cantarell",
     "Neue",
     "plopfile",
-    "poppins",
-    "testid",
-    "xlarge",
-    "xsmall",
-    "xxlarge",
-    "xxsmall"
-  ]
+    "Roboto",
+    "Segoe"
+  ],
+
+  // Workbench
+  "workbench.startupEditor": "newUntitledFile",
+  "workbench.editor.labelFormat": "short",
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.sideBar.location": "left",
+  "workbench.list.smoothScrolling": true,
+  "workbench.colorTheme": "Dracula Soft",
+  "workbench.activityBar.visible": true,
+  "workbench.layoutControl.enabled": false,
+
+  // Explorer
+  "explorer.compactFolders": false,
+  "explorer.confirmDelete": true,
+
+  // Editor and breadcrumbs
+  "breadcrumbs.enabled": true,
+  "editor.renderControlCharacters": true,
+  "editor.tabSize": 2,
+  "editor.renderLineHighlight": "gutter",
+  "editor.rulers": [79, 120],
+  "editor.minimap.enabled": false,
+  "editor.fontSize": 15,
+  "editor.detectIndentation": true,
+  "editor.snippetSuggestions": "top",
+  "editor.wordBasedSuggestions": false,
+  "editor.suggest.localityBonus": true,
+  "editor.acceptSuggestionOnCommitCharacter": false,
+  "editor.formatOnPaste": false,
+  "editor.cursorSmoothCaretAnimation": "on",
+  "editor.smoothScrolling": true,
+  "editor.fontFamily": "'Operator Mono Lig Book', 'SF Mono', Consolas, 'Source Code Pro', 'Dank Mono', 'Fira Code', Menlo, 'Inconsolata', 'Droid Sans Mono', 'DejaVu Sans Mono', 'Ubuntu Mono', 'Courier New', Courier, Monaco, monospace",
+  "editor.glyphMargin": false,
+  "editor.fontLigatures": true,
+
+  "editor.suggestSelection": "first",
+
+  // Git
+  "git.enableSmartCommit": true,
+  "diffEditor.ignoreTrimWhitespace": true,
+
+  // Debug
+  "debug.console.fontSize": 15,
+
+  // Files and search
+  "files.defaultLanguage": "{activeEditorLanguage}",
+  "files.exclude": {
+    "USE_GITIGNORE": true
+  },
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "**/coverage": true,
+    "**/dist": true,
+    "**/build": true,
+    "**/.build": true,
+    "**/.gh-pages": true
+  },
+
+  // Terminal
+  "terminal.integrated.copyOnSelection": false,
+  "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.cursorStyle": "line",
+  "terminal.integrated.fontFamily": "'Fira Code', 'SF Mono', Consolas, 'Source Code Pro', 'Dank Mono', Menlo, 'Inconsolata', 'Droid Sans Mono', 'DejaVu Sans Mono', 'Ubuntu Mono', 'Courier New', Courier, Monaco, monospace",
+  "terminal.integrated.fontSize": 12,
+  "terminal.integrated.drawBoldTextInBrightColors": false,
+  "terminal.integrated.enableFileLinks": "off",
+  "terminal.integrated.env.linux": {
+    // "PORT": "4000"
+  },
+
+  // Javascript & TypeScript
+  "javascript.suggest.autoImports": true,
+  "typescript.suggest.autoImports": true,
+
+  // ##################### Extensions ##################### //
+
+  // Bracket pair colorizer
+  "bracket-pair-colorizer-2.colors": [
+    "#8BE9FD",
+    "#50FA7B",
+    "#FFB86C",
+    "#FF79C6",
+    "#BD93F9",
+    "#F1FA8C"
+  ],
+  "bracket-pair-colorizer-2.colorMode": "Consecutive",
+  "bracket-pair-colorizer-2.forceUniqueOpeningColor": false,
+  "bracket-pair-colorizer-2.forceIterationColorCycle": false,
+  "bracket-pair-colorizer-2.showBracketsInGutter": true,
+  "bracket-pair-colorizer-2.showBracketsInRuler": true,
+  "bracket-pair-colorizer-2.showVerticalScopeLine": false,
+  "bracket-pair-colorizer-2.showHorizontalScopeLine": false,
+  "bracket-pair-colorizer-2.unmatchedScopeColor": "#FF5555",
+
+  // Material icon theme extension
+  "material-icon-theme.hidesExplorerArrows": true,
+  "material-icon-theme.folders.theme": "specific",
+  "material-icon-theme.folders.color": "#6273a6",
+  // Colorize (in big files you may want to disable this)
+  "colorize.hide_current_line_decorations": false,
+  "colorize.include": [".tsx", ".jsx", ".ts", ".js"],
+  "colorize.languages": [
+    "typescriptreact",
+    "javascriptreact",
+    "javascript",
+    "typescript",
+    "css",
+    "sass",
+    "scss",
+    "less",
+    "pcss",
+    "sss",
+    "stylus",
+    "xml",
+    "svg",
+    "json",
+    "jsonc",
+    "yaml"
+  ],
+  "colorize.colorized_colors": [
+    // "BROWSERS_COLORS", // this is reaaally annoying
+    "HEXA",
+    "RGB",
+    "HSL"
+  ],
+  "colorize.enable_search_variables": false,
+
+  // VsCode Action Buttons
+  "actionButtons": {
+    "defaultColor": "#8be9fd", // Can also use string color names.
+    "loadNpmCommands": false, // Disables automatic generation of actions for npm commands.
+    "reloadButton": "🗘", // Custom reload button text or icon (default ↻). null value enables automatic reload on configuration change
+    "commands": [
+      //Next commands with yarn
+      {
+        "name": "Story Book",
+        "color": "#8be9fd",
+        "singleInstance": true,
+        "command": "yarn storybook" // This is executed in the terminal.
+      },
+
+      {
+       "name": "Developer",
+       "color": "#8be9fd",
+       "singleInstance": true,
+       "command": "yarn dev" // This is executed in the terminal.
+     },
+
+     {
+      // Terminal initial folder ${workspaceFolder} and os user home as defaults
+     "name": "Build",
+     "color": "#8be9fd",
+     "singleInstance": true,
+     "command": "yarn dev" // This is executed in the terminal.
+      },
+
+      {
+       "name": "Test",
+       "color": "#8be9fd",
+       "singleInstance": true,
+       "command": "yarn test:watch" // This is executed in the terminal.
+      }
+    ]
+  },
+
+  //Tabnine
+  "tabnine.experimentalAutoImports": true,
+
+  //HTML
+  "html.format.wrapLineLength": 80,
+
+  //Accessibility
+  "editor.accessibilitySupport": "off",
+
+  //cSpellChecker
+  "cSpell.language": "en,pt-BR",
+
+
 }
-
-
