--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "next lint --max-warnings=0",
     "test": "jest",
     "test:watch": "yarn test --watch",
-    "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public"
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook "
   },
   "dependencies": {
     "@next/font": "13.1.6",
