feat: added home page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,16 +10,21 @@
     "Neue",
     "plopfile",
     "Roboto",
-    "Segoe"
+    "Segoe",
+    "xlarge",
+    "xsmall",
+    "xxlarge",
+    "xxsmall",
+    "xxxlarge"
   ],
 
   // Workbench
   "workbench.startupEditor": "newUntitledFile",
   "workbench.editor.labelFormat": "short",
-  "workbench.iconTheme": "material-icon-theme",
+  "workbench.iconTheme": "eq-material-theme-icons",
   "workbench.sideBar.location": "left",
   "workbench.list.smoothScrolling": true,
-  "workbench.colorTheme": "Dracula Soft",
+  "workbench.colorTheme": "OM Theme (Default Dracula Italic)",
   "workbench.activityBar.visible": true,
   "workbench.layoutControl.enabled": false,
 
@@ -43,9 +48,9 @@
   "editor.formatOnPaste": false,
   "editor.cursorSmoothCaretAnimation": "on",
   "editor.smoothScrolling": true,
-  "editor.fontFamily": "'Operator Mono Lig Book', 'SF Mono', Consolas, 'Source Code Pro', 'Dank Mono', 'Fira Code', Menlo, 'Inconsolata', 'Droid Sans Mono', 'DejaVu Sans Mono', 'Ubuntu Mono', 'Courier New', Courier, Monaco, monospace",
-  "editor.glyphMargin": false,
+  "editor.fontFamily": "'Fira Code', 'Operator Mono Lig Book', 'SF Mono', Consolas, 'Source Code Pro', 'Dank Mono', 'Fira Code', Menlo, 'Inconsolata', 'Droid Sans Mono', 'DejaVu Sans Mono', 'Ubuntu Mono', 'Courier New', Courier, Monaco, monospace",
   "editor.fontLigatures": true,
+  "editor.glyphMargin": false,
 
   "editor.suggestSelection": "first",
 
@@ -192,3 +197,6 @@
 
 
 }
+
+
+
