feat: added checkbox, radio, texfield

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "lint": "next lint --max-warnings=0",
-    "typecheck": "tsc --project tsconfig.json --noEmit", 
+    "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest",
     "test:watch": "yarn test --watch",
     "storybook": "start-storybook -p 6006",
@@ -37,6 +37,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
